Virtual threads (#65)
* Upgrading the Java version to version 21

* Adding a service for asynchronous tasks

* Moved the implementation of multithreading to AsyncService

* Removed Executor.java

* A little refactoring

* spotlessApply

* Shutting down the application in one function.

* Transferring Lock functionality to LockUtil

* AsyncService optimization

* Return interrupted thread for PeerTurnRefreshModule

* Return interrupted thread for GPGNetClient

* Executor with dependency injection

* spotlessApply

* Let all processes in executor terminate correctly, otherwise close the application.

* Returned Thread to classes with infinite loops.

* Error handling

* Fix close Ice Adapter

* Fixing shutdown after InterruptedException