@@ -1,10 +1,12 @@
 package com.faforever.iceadapter.gpgnet;
 
-import static com.faforever.iceadapter.debug.Debug.debug;
-
 import com.faforever.iceadapter.IceAdapter;
 import com.faforever.iceadapter.rpc.RPCService;
+import com.faforever.iceadapter.util.LockUtil;
 import com.faforever.iceadapter.util.NetworkToolbox;
+import lombok.Getter;
+import lombok.extern.slf4j.Slf4j;
+
 import java.io.IOException;
 import java.net.ServerSocket;
 import java.net.Socket;
@@ -13,14 +15,17 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.locks.Lock;
+import java.util.concurrent.locks.ReentrantLock;
 import java.util.stream.Collectors;
-import lombok.Getter;
-import lombok.extern.slf4j.Slf4j;
+
+import static com.faforever.iceadapter.debug.Debug.debug;
 
 @Slf4j
 public class GPGNetServer {
     private static int GPGNET_PORT;
     private static int LOBBY_PORT;
+    private static final Lock lockSocket = new ReentrantLock();
     private static ServerSocket serverSocket;
     private static volatile GPGNetClient currentClient;
 
@@ -50,9 +55,10 @@ public class GPGNetServer {
             serverSocket = new ServerSocket(GPGNetServer.getGpgnetPort());
         } catch (IOException e) {
             log.error("Couldn't start GPGNetServer", e);
-            System.exit(-1);
+            IceAdapter.close(-1);
         }
-        new Thread(GPGNetServer::acceptThread).start();
+
+        CompletableFuture.runAsync(GPGNetServer::acceptThread, IceAdapter.getExecutor());
         log.info("GPGNetServer started");
     }
 
@@ -67,6 +73,7 @@ public class GPGNetServer {
         private final Thread listenerThread;
         private volatile boolean stopping = false;
         private FaDataOutputStream gpgnetOut;
+        private final Lock lockStream = new ReentrantLock();
         private final CompletableFuture<GPGNetClient> lobbyFuture = new CompletableFuture<>();
 
         private GPGNetClient(Socket socket) {
@@ -77,9 +84,7 @@ public class GPGNetServer {
             } catch (IOException e) {
                 log.error("Could not create GPGNet output steam to FA", e);
             }
-
-            listenerThread = new Thread(this::listenerThread);
-            listenerThread.start();
+            listenerThread = Thread.startVirtualThread(this::listenerThread);
 
             RPCService.onConnectionStateChanged("Connected");
             log.info("GPGNetClient has connected");
@@ -129,17 +134,20 @@ public class GPGNetServer {
         /**
          * Send a message to this FA instance via GPGNet
          */
-        public synchronized void sendGpgnetMessage(String command, Object... args) {
-            try {
-                gpgnetOut.writeMessage(command, args);
-                log.info(
-                        "Sent GPGNet message: {} {}",
-                        command,
-                        Arrays.stream(args).map(Object::toString).collect(Collectors.joining(" ")));
-            } catch (IOException e) {
-                log.error("Error while communicating with FA (output), assuming shutdown", e);
-                GPGNetServer.onGpgnetConnectionLost();
-            }
+        public void sendGpgnetMessage(String command, Object... args) {
+            LockUtil.executeWithLock(lockStream, () -> {
+                try {
+
+                    gpgnetOut.writeMessage(command, args);
+                    log.info(
+                            "Sent GPGNet message: {} {}",
+                            command,
+                            Arrays.stream(args).map(Object::toString).collect(Collectors.joining(" ")));
+                } catch (IOException e) {
+                    log.error("Error while communicating with FA (output), assuming shutdown", e);
+                    GPGNetServer.onGpgnetConnectionLost();
+                }
+            });
         }
 
         /**
@@ -152,7 +160,9 @@ public class GPGNetServer {
             // and is now going to set GPGNetServer.currentClient
             try (var inputStream = socket.getInputStream();
                     var gpgnetIn = new FaDataInputStream(inputStream)) {
-                while ((!triggerActive || GPGNetServer.currentClient == this) && !stopping) {
+                while (!Thread.currentThread().isInterrupted()
+                        && (!triggerActive || GPGNetServer.currentClient == this)
+                        && !stopping) {
                     String command = gpgnetIn.readString();
                     List<Object> args = gpgnetIn.readChunks();
 
@@ -191,7 +201,7 @@ public class GPGNetServer {
      */
     private static void onGpgnetConnectionLost() {
         log.info("GPGNet connection lost");
-        synchronized (serverSocket) {
+        LockUtil.executeWithLock(lockSocket, () -> {
             if (currentClient != null) {
                 currentClient.close();
                 currentClient = null;
@@ -204,7 +214,7 @@ public class GPGNetServer {
 
                 IceAdapter.onFAShutdown();
             }
-        }
+        });
         debug().gpgnetConnectedDisconnected();
     }
 
@@ -212,10 +222,10 @@ public class GPGNetServer {
      * Listens for incoming connections from a game instance
      */
     private static void acceptThread() {
-        while (IceAdapter.isRunning()) {
+        while (!Thread.currentThread().isInterrupted() && IceAdapter.isRunning()) {
             try {
                 Socket socket = serverSocket.accept();
-                synchronized (serverSocket) {
+                LockUtil.executeWithLock(lockSocket, () -> {
                     if (currentClient != null) {
                         onGpgnetConnectionLost();
                     }
@@ -224,7 +234,7 @@ public class GPGNetServer {
                     clientFuture.complete(currentClient);
 
                     debug().gpgnetConnectedDisconnected();
-                }
+                });
             } catch (SocketException e) {
                 return;
             } catch (IOException e) {
